2013-07-05  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/types.h (u_char): Add redefinition guard.
	(u_short, u_int, u_long, caddr_t, daddr_t): Ditto.

2013-07-02  Joey Ye  <joey.ye@arm.com>

	Lite exit support.
	* README: Add information about lite-exit.
	* acconfig.h (_LITE_EXIT): New macro.
	* configure.in (enable-lite-exit): New option.
	(_LITE_EXIT): Define new macro.
	* configure: Regenerated.
	* newlib.hin (_LITE_EXIT): New macro.
	* libc/stdlib/__atexit.c [_LITE_EXIT]: Add dummy explicit 
	reference to __call_exitprocs.
	* libc/stdlib/cxa_atexit.c [_LITE_EXIT]: Make __register_exitproc a
	weak reference.
	* libc/stdlib/exit.c (exit)[_LITE_EXIT]: Remove TWS and weakly reference
	__call_exitprocs.

2013-07-02  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/reent.h: Fix typo in comment.

2013-07-01  Will Newton  <will.newton@linaro.org>

	* libc/machine/arm/memcpy-armv7a.S: Adjust entry to
	 aligned loop to improve misaligned copy performance.

2013-06-26  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/stdio.h: Specify std streams always in terms
	of _REENT.
	* libc/include/wchar.h: Ditto.
	* libc/include/sys/reent.h: Remove _RENT_ONLY check around
	setting of _REENT macro.

2013-06-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/string.h (rawmemchr): Declare.
	* libc/string/Makefile.am (ELIX_4_SOURCES): Add rawmemchr.c.
	(CHEWOUT_FILES): Add rawmemchr.def.
	* libc/string/Makefile.in: Regenerate.
	* libc/string/rawmemchr.c: New file.

2013-06-24  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/reent/reent.c (_reclaim_reent): Free also _misc and
	_signal_buf.

2013-06-24  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/include/sys/reent.h (_ATEXIT_INIT_PTR): Remove.
	(_REENT_INIT_ATEXIT_PTR): Remove.
	(_REENT_INIT_PTR): Reduce code size if _REENT_SMALL.

2013-06-21  Will Newton  <will.newton@linaro.org>

	* libc/machine/arm/strlen-armv7.S: Import latest strlen