@@ -46,11 +46,8 @@ _DEFUN(_fwalk, (ptr, function),
    */
   for (g = &ptr->__sglue; g != NULL; g = g->_next)
     for (fp = g->_iobs, n = g->_niobs; --n >= 0; fp++)
-      if (fp->_flags != 0)
-        {
-          if (fp->_flags != 0 && fp->_flags != 1 && fp->_file != -1)
-            ret |= (*function) (fp);
-        }
+      if (fp->_flags != 0 && fp->_flags != 1 && fp->_file != -1)
+	ret |= (*function) (fp);
 
   return ret;
 }
