@@ -1,3 +1,7 @@
+2013-07-09  Bin Cheng  <bin.cheng@arm.com>
+
+	* libc/stdio/fwalk.c (_fwalk): Remove redundant test.
+
 2013-07-05  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* libc/include/sys/types.h (u_char): Add redefinition guard.
